# aws-s3-tui

./: README.md  pyproject.toml
.github/workflows/: bump-minor-pr.yml  bump-minor.yml  tests.yml
awss/: __init__.py  app.py  gen_sso_profiles.py  s3.py
tests/: test_app.py  test_cli.py  test_s3.py  test_tui.py
