[project]
name = "awss3tui"
version = "0.5"
description = "Textual TUI to navigate S3 across multiple AWS profiles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.28",
  "textual>=0.45",
]

[project.scripts]
s3 = "awss.app:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["awss"]
